replace duplicated question, add january translations and align blank spaces across questions

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -7,41 +7,41 @@
     "todayQuestion": "Buckle up! Today's question is:",
     "questions": {
         "0": {
-            "1": "Qual è il tuo obiettivo principale dell’anno?",
-            "2": "Per cosa sei più riconoscente?",
-            "3": "Sei felice?",
-            "4": "Qual è il tuo ricordo più bello dello scorso anno?",
-            "5": "Qual è stato il più grande obiettivo che hai raggiunto di recente?",
-            "6": "Senza quale bene materiale non riusciresti a vivere?",
-            "7": "Le persone possono cambiare?",
-            "8": "Qual è l’ultima cosa buona che hai mangiato?",
-            "9": "Attualmente qual è il tuo snack preferito?",
-            "10": "Cosa ti ha fatto sorridere oggi?",
-            "11": "Qual è il tuo accessorio preferito?",
-            "12": "Cosa ti sta rendendo arrabbiato?",
-            "13": "Cos'hai mangiato a cena?",
-            "14": "Cos'hai fatto oggi?",
-            "15": "Da chi hai ricevuto l’ultima telefonata?",
-            "16": "Di chi sei innamorato?",
-            "17": "Per cosa sei riconoscente?",
-            "18": "Il momento più bello oggi è stato ______________.",
-            "19": "Il mio sito internet preferito è _________________.",
-            "20": "Qual è la cosa più difficile contro la quale stai combattendo?",
-            "21": "Oggi avrei voluto avere più _________________.",
-            "22": "Domani andrà meglio perché ___________________.",
-            "23": "Cosa ha reso questa giornata insolita?",
-            "24": "Cosa cerchi nella vita?",
-            "25": "Qual è la tua bevanda preferita?",
-            "26": "Oggi la temperature era ___________________.",
-            "27": "Quanto hai speso al supermercato l’ultima volta?",
-            "28": "Domani _________________________.",
-            "29": "Qual è stato il tuo ultimo acquisto importante?",
-            "30": "La mia casa (abitazione) è una CASA (in senso affettivo) perché _______________________.",
-            "31": "Chi è l’ultima persona ad averti detto che ti ama o che ti vuole bene?"
+            "1": "What is your main goal for the year?",
+            "2": "What are you most grateful for?",
+            "3": "Are you happy?",
+            "4": "What is your best memory from last year?",
+            "5": "What was the biggest goal you recently achieved?",
+            "6": "What material possession could you not live without?",
+            "7": "Can people change?",
+            "8": "What is the last good thing you ate?",
+            "9": "What is your current favorite snack?",
+            "10": "What made you smile today?",
+            "11": "What is your favorite accessory?",
+            "12": "What is making you angry?",
+            "13": "What did you have for dinner?",
+            "14": "What did you do today?",
+            "15": "Who did you receive the last phone call from?",
+            "16": "Who are you in love with?",
+            "17": "What's the silliest thing you've done recently?",
+            "18": "The best moment today was ______________.",
+            "19": "My favorite website is ______________.",
+            "20": "What is the most difficult thing you are fighting against?",
+            "21": "Today I wish I had more ______________.",
+            "22": "Tomorrow will be better because ______________.",
+            "23": "What made this day unusual?",
+            "24": "What are you looking for in life?",
+            "25": "What is your favorite drink?",
+            "26": "Today the temperature was ______________.",
+            "27": "How much did you spend at the supermarket last time?",
+            "28": "Tomorrow ______________.",
+            "29": "What was your last major purchase?",
+            "30": "My house (home) is a HOME (in an emotional sense) because ______________.",
+            "31": "Who is the last person to tell you they love or care about you?"
         },
         "1": {
             "1": "Quale oggetto di arredamento in tuo possesso preferisci?",
-            "2": "La bolletta/fattura più costosa che ho pagato lo scorso mese è stata ________.",
+            "2": "La bolletta/fattura più costosa che ho pagato lo scorso mese è stata ______________.",
             "3": "Qual è l’ultima cosa per cui ti sei scusato?",
             "4": "Il mio colore preferito è ______________.",
             "5": "Su una scala da 1 a 10 quanto valuteresti la tua salute?",
@@ -50,19 +50,19 @@
             "8": "Qual è la TV con lo schermo più grande a casa tua?",
             "9": "A che ora sei andato a dormire la scorsa notte?",
             "10": "Cos'hai comprato oggi?",
-            "11": "Vorrei avere ____________.",
+            "11": "Vorrei avere ______________.",
             "12": "Quante foto hai fatto/pubblicato oggi?",
             "13": "Quale libro stai leggendo oggi?",
             "14": "Quante ore hai dormito la scorsa notte?",
             "15": "Qual è l’ultima cosa che volevi ma non hai avuto?",
             "16": "Qual è il tuo stato d’animo oggi?",
             "17": "Qual è stata l’ultima cosa nuova che hai sperimentato?",
-            "18": "La mia speranza più grande è _____________.",
+            "18": "La mia speranza più grande è ______________.",
             "19": "Cosa ha messo alla prova le tue certezze?",
             "20": "Che macchina possiedi?",
             "21": "Elenca i tuoi animali.",
             "22": "Elenca 3 cose che devi acquistare",
-            "23": "Oggi mi ha fatto bene sapere __________________.",
+            "23": "Oggi mi ha fatto bene sapere ______________.",
             "24": "Nella vita di chi hai fatto la differenza oggi?",
             "25": "Qual è il tuo super potere?",
             "26": "Cosa ti sta dando fastidio?",
@@ -89,10 +89,10 @@
             "16": "Pesi ogni opportunità?",
             "17": "Dove sei stato oggi?",
             "18": "Quale consiglio ti è stato dato?",
-            "19": "Oggi è stato ________________________.",
+            "19": "Oggi è stato ______________.",
             "20": "Cosa sei contento di aver fatto oggi?",
             "21": "Quando sei stato in vacanza l’ultima volta? Dove sei stato?",
-            "22": "La saggezza più grande viene da _____________________.",
+            "22": "La saggezza più grande viene da ______________.",
             "23": "Chi è il tuo eroe?",
             "24": "Perché?",
             "25": "Se avessi potuto leggere nella mente di qualcuno oggi, chi avresti scelto?",
@@ -100,7 +100,7 @@
             "27": "Hai ringraziato qualcuno oggi?",
             "28": "Hai lavorato sodo oggi?",
             "29": "Cosa hai trovato nella cassetta della posta oggi?",
-            "30": "Oggi è stato un totale ______________________.",
+            "30": "Oggi è stato un totale ______________.",
             "31": "Cosa stai cercando?"
         },
         "3": {
@@ -118,7 +118,7 @@
             "12": "Di cosa hai avuto paura oggi?",
             "13": "Cosa ti sei dimenticato?",
             "14": "Qual è il tuo programma televisivo preferito?",
-            "15": "Credo che _________________.",
+            "15": "Credo che ______________.",
             "16": "Chi è l’ultima persona che hai baciato?",
             "17": "Cosa indossavi oggi?",
             "18": "Cosa ti sta mettendo alla prova?",
@@ -130,7 +130,7 @@
             "24": "Sei stato creativo oggi? In che modo?",
             "25": "Qual è il prossimo grande acquisto che devi fare?",
             "26": "Qual è l’ultima cosa che ti ha fatto piangere?",
-            "27": "Oggi è stata dura perché _________________.",
+            "27": "Oggi è stata dura perché ______________.",
             "28": "Di chi sei geloso?",
             "29": "Dove vuoi andare prossimamente?",
             "30": "Cosa hai letto oggi?"
@@ -139,18 +139,18 @@
             "1": "Chi è stato gentile con te oggi?",
             "2": "Chi è l’ultima persona con cui hai parlato?",
             "3": "Cosa ti fa sentire vivo?",
-            "4": "Il negozio che frequenti di più è _________________________.",
+            "4": "Il negozio che frequenti di più è ______________.",
             "5": "Come ti sei rilassato oggi?",
             "6": "Descrivi il paio di scarpe preferito che possiedi.",
             "7": "Quale regola ti condiziona di più durante il giorno?",
             "8": "Quante paia di scarpe possiedi?",
-            "9": "Oggi ho perso __________________.",
-            "10": "Vorrei che ___________ non fosse stato inventato.",
+            "9": "Oggi ho perso ______________.",
+            "10": "Vorrei che ______________ non fosse stato inventato.",
             "11": "Qual è la cosa più costosa in tuo possesso che puoi portare con te?",
             "12": "Quanti soldi hai nel portafoglio in questo momento?",
             "13": "Cosa ha reso oggi una giornata unica?",
             "14": "Cosa non hai completato oggi?",
-            "15": "Oggi il tempo era _________________________.",
+            "15": "Oggi il tempo era ______________.",
             "16": "Cosa ti è arrivato via mail oggi?",
             "17": "Cosa avresti voluto dire oggi?",
             "18": "Qual è stata la decisione più grande che hai preso oggi?",
@@ -186,7 +186,7 @@
             "15": "Quanti sollevamenti sei in grado di fare?",
             "16": "Cosa stai aspettando?",
             "17": "Qual è il tuo piatto preferito da cucinare?",
-            "18": "Non è mai troppo ____________________________.",
+            "18": "Non è mai troppo ______________.",
             "19": "Qual è la cosa più importante che ti è stata detta oggi?",
             "20": "Qual è l’ultima cosa a cui hai pensato oggi?",
             "21": "Qual è il titolo dell’ultimo libro che hai letto?",
@@ -197,18 +197,18 @@
             "26": "Stavi bene o male oggi?",
             "27": "Qual è la cosa più intelligente che hai fatto oggi?",
             "28": "Cosa hai trovato nella cassetta delle lettere oggi?",
-            "29": "Oggi ero ________________.",
-            "30": "L’ultima cosa che ho acquistato per me stesso è stata __________________."
+            "29": "Oggi ero ______________.",
+            "30": "L’ultima cosa che ho acquistato per me stesso è stata ______________."
         },
         "6": {
             "1": "Eri solo oggi?",
             "2": "Chi è stata l’ultima persona che hai visto oggi?",
             "3": "Cosa hai bisogno di abbandonare?",
             "4": "Quale film vorresti vedere?",
-            "5": "Non posso/non sono in grado di ____________________.",
+            "5": "Non posso/non sono in grado di ______________.",
             "6": "A chi hai inviato un messaggio oggi?",
             "7": "Hai giocato alla lotteria?",
-            "8": "È capitata una cosa divertente mentre _____________________.",
+            "8": "È capitata una cosa divertente mentre ______________.",
             "9": "Nomina una cosa che dovresti buttare, ma non lo fai.",
             "10": "Cosa ti ha reso soddisfatto di te stesso di recente?",
             "11": "Chi hai visto più spesso oggi?",
@@ -238,18 +238,18 @@
             "2": "Cosa hai abbandonato?",
             "3": "Cosa vuoi terminare domani?",
             "4": "Qual è l’ultimo regalo che hai fatto?",
-            "5": "L’ultima volta che mi sono allenato ____________________.",
+            "5": "L’ultima volta che mi sono allenato ______________.",
             "6": "Cos’hai creato oggi?",
             "7": "Quale ricordo ti è passato per la mente oggi?",
             "8": "Qual è l’ultimo rischio che hai corso?",
             "9": "Cosa ti fa scendere a compromessi?",
             "10": "Hai pensato a qualcuno in particolare oggi? Chi e perché?",
-            "11": "In una scala da 1 a 10 la mia giornata è stata __________.",
+            "11": "In una scala da 1 a 10 la mia giornata è stata ______________.",
             "12": "Cosa dice l’ultimo messaggio che hai ricevuto?",
             "13": "Devi dei soldi a qualcuno?",
             "14": "Qual è la parte del tuo corpo che preferisci?",
             "15": "Qual è la cosa peggiore che hai mangiato oggi?",
-            "16": "Spero che nessuno stesse guardando mentre _______________.",
+            "16": "Spero che nessuno stesse guardando mentre ______________.",
             "17": "Quanti chilometri hai percorso oggi?",
             "18": "Chi è stata la prima persona che hai visto oggi?",
             "19": "Qual è la tua più grande fobia?",
@@ -271,30 +271,30 @@
             "2": "Cosa ti incuriosisce?",
             "3": "Qual è l'ultima cosa che hai imparato?",
             "4": "Dove vorresti andare?",
-            "5": "L’ultima volta che sei stato dal medico ___________.",
+            "5": "L’ultima volta che sei stato dal medico ______________.",
             "6": "Quale piccolo gesto di gentilezza hai ricevuto o compiuto oggi?",
             "7": "Qual è l’ultima cosa per cui ti senti in colpa?",
-            "8": "La mia vita sarebbe più semplice se __________________.",
+            "8": "La mia vita sarebbe più semplice se ______________.",
             "9": "Qualcuno ti deve dei soldi?",
             "10": "Quando è stata l’ultima volta in cui intenzionalmente hai perso tempo?",
             "11": "Qual è il tuo gadget preferito?",
-            "12": "Il dispositivo che uso più spesso è _______________________.",
+            "12": "Il dispositivo che uso più spesso è ______________.",
             "13": "Come hai trascorso il tuo tempo libero oggi?",
             "14": "Eri stressato oggi? Perché?",
             "15": "Qual è stata l’ultima cosa che hai detto a qualcuno oggi?",
             "16": "Chi è uscito di testa all’ultima festa a cui hai partecipato?",
             "17": "Cosa è andato alla perfezione oggi?",
             "18": "Quanti anni credi di avere?",
-            "19": "Oddio! __________________.",
+            "19": "Oddio! ______________.",
             "20": "Perché ti sei sentito sotto pressione oggi?",
-            "21": "L’ultimo regalo che ho ricevuto è stato ________________.",
+            "21": "L’ultimo regalo che ho ricevuto è stato ______________.",
             "22": "Se potessi cambiare oggi lo faresti?",
-            "23": "Credo ___________________.",
+            "23": "Credo ______________.",
             "24": "Cosa speravi di poter evitare oggi?",
             "25": "Eri padrone delle situazioni oggi?",
             "26": "Cosa ha reso fruttuosa questa giornata?",
             "27": "Sei stato in grado di ascoltare oggi?",
-            "28": "Non _____ mai _________________.",
+            "28": "Non ______________ mai ______________.",
             "29": "Hai infranto la legge? Come?",
             "30": "Ti sei annoiato oggi?"
         },
@@ -310,7 +310,7 @@
             "9": "Cos’hai sbagliato?",
             "10": "Hai avuto un'intuizione o un'idea interessante oggi?",
             "11": "Qual è il tuo obiettivo?",
-            "12": "Se qualcuno dovesse descrivere il tuo comportamento di oggi con una parola, questa sarebbe _________.",
+            "12": "Se qualcuno dovesse descrivere il tuo comportamento di oggi con una parola, questa sarebbe ______________.",
             "13": "Hai avuto una conversazione che ti ha fatto riflettere?",
             "14": "Descrivi l’ultimo oggetto di arredo che hai acquistato.",
             "15": "A che ora ti sei alzato oggi?",
@@ -320,7 +320,7 @@
             "19": "Il prossimo anno, cosa speri caratterizzi la tua vita?",
             "20": "Chi nella tua famiglia ha un talento straordinario? Quale?",
             "21": "Cosa vorresti ci fosse di più nel mondo?",
-            "22": "Il mio suono preferito è _________________.",
+            "22": "Il mio suono preferito è ______________.",
             "23": "Quale impatto speri di avere sul mondo?",
             "24": "Se potessi fare le leggi, quale sarebbe quella di oggi?",
             "25": "Descrivi l’ultimo episodio che ti ha sconvolto la vita.",
@@ -358,14 +358,14 @@
             "24": "Elenca le ultime 3 cose che hai utilizzato oggi.",
             "25": "Quale suono o rumore non sopporti?",
             "26": "Ti senti apprezzato?",
-            "27": "Il mio corpo è ______________________.",
-            "28": "Oggi ho __________ troppo/a/e/i ______.",
+            "27": "Il mio corpo è ______________.",
+            "28": "Oggi ho ______________ troppo/a/e/i ______________.",
             "29": "Quale oggetto possiedi che ti ricorda un bel momento del passato?",
             "30": "Cosa hai dovuto fare oggi?"
         },
         "11": {
             "1": "Chi è il tuo migliore amico?",
-            "2": "Vorrei davvero _________________.",
+            "2": "Vorrei davvero ______________.",
             "3": "C'è stato un momento in cui ti sei sentito particolarmente connesso con qualcuno?",
             "4": "Quale ricordo vuoi conservare di oggi?",
             "5": "Se potessi cenare con una persona, viva o morta, chi sceglieresti?",
@@ -373,7 +373,7 @@
             "7": "Che lavoro avresti voluto fare?",
             "8": "Quale relazione hai coltivato oggi?",
             "9": "Cosa ti appassiona?",
-            "10": "Domani credo di dover __________________.",
+            "10": "Domani credo di dover ______________.",
             "11": "Invidi qualcuno?",
             "12": "Una cosa strana successa oggi?",
             "13": "Quanto sei stato da solo oggi?",
@@ -383,16 +383,16 @@
             "17": "Qual è stata la prima cosa che hai visto quando ti sei svegliato stamattina?",
             "18": "Elenca 3 cose che devi fare domani.",
             "19": "Qual è l’ultimo sito online che hai visitato?",
-            "20": "Oggi ho scelto di ________________.",
+            "20": "Oggi ho scelto di ______________.",
             "21": "Oggi avevi pensieri positivi o negativi?",
             "22": "Chi è la persona più forte che conosci e perché?",
             "23": "Chi avresti voluto prendesse parte alla tua giornata?",
             "24": "Qual è una cosa che ti è stata detta oggi e non vuoi dimenticare?",
             "25": "Qual è stata la tua debolezza oggi?",
-            "26": "Il genere musicale che ascolto più spesso è ________________.",
+            "26": "Il genere musicale che ascolto più spesso è ______________.",
             "27": "Quanto hai mangiato oggi?",
             "28": "Per cosa vale la pena combattere?",
-            "29": "Oggi mi sono sentito __________________.",
+            "29": "Oggi mi sono sentito ______________.",
             "30": "Oggi eri più sorridente o corrucciato?",
             "31": "Quali progressi stai facendo?"
         }
