add february translations and improve question

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -40,35 +40,35 @@
             "31": "Who is the last person to tell you they love or care about you?"
         },
         "1": {
-            "1": "Quale oggetto di arredamento in tuo possesso preferisci?",
-            "2": "La bolletta/fattura più costosa che ho pagato lo scorso mese è stata ______________.",
-            "3": "Qual è l’ultima cosa per cui ti sei scusato?",
-            "4": "Il mio colore preferito è ______________.",
-            "5": "Su una scala da 1 a 10 quanto valuteresti la tua salute?",
-            "6": "Se potessi rivivere oggi, cambieresti qualcosa?",
-            "7": "Nomina una persona con la quale speravi di non avere a che fare oggi",
-            "8": "Qual è la TV con lo schermo più grande a casa tua?",
-            "9": "A che ora sei andato a dormire la scorsa notte?",
-            "10": "Cos'hai comprato oggi?",
-            "11": "Vorrei avere ______________.",
-            "12": "Quante foto hai fatto/pubblicato oggi?",
-            "13": "Quale libro stai leggendo oggi?",
-            "14": "Quante ore hai dormito la scorsa notte?",
-            "15": "Qual è l’ultima cosa che volevi ma non hai avuto?",
-            "16": "Qual è il tuo stato d’animo oggi?",
-            "17": "Qual è stata l’ultima cosa nuova che hai sperimentato?",
-            "18": "La mia speranza più grande è ______________.",
-            "19": "Cosa ha messo alla prova le tue certezze?",
-            "20": "Che macchina possiedi?",
-            "21": "Elenca i tuoi animali.",
-            "22": "Elenca 3 cose che devi acquistare",
-            "23": "Oggi mi ha fatto bene sapere ______________.",
-            "24": "Nella vita di chi hai fatto la differenza oggi?",
-            "25": "Qual è il tuo super potere?",
-            "26": "Cosa ti sta dando fastidio?",
-            "27": "Cosa avrebbe reso questa giornata perfetta?",
-            "28": "Cosa ti mette ansia?",
-            "29": "Cosa hai fatto per approfittare di questo giorno in più quest’anno?"
+            "1": "What is your favorite piece of furniture you own?",
+            "2": "The most expensive bill I paid last month was ______________.",
+            "3": "What is the last thing you apologized for?",
+            "4": "My favorite color is ______________.",
+            "5": "On a scale of 1 to 10, how would you rate your health?",
+            "6": "If you could relive today, would you change anything?",
+            "7": "Name a person you were hoping to avoid today.",
+            "8": "What is the largest screen TV in your house?",
+            "9": "What time did you go to sleep last night?",
+            "10": "What did you buy today?",
+            "11": "I wish I had ______________.",
+            "12": "How many photos did you take/post today?",
+            "13": "Which book are you reading today?",
+            "14": "How many hours did you sleep last night?",
+            "15": "What's one small thing that always makes you happy?",
+            "16": "What is your mood today?",
+            "17": "What was the last new thing you experienced?",
+            "18": "My greatest hope is ______________.",
+            "19": "What challenged your certainties?",
+            "20": "What car do you own?",
+            "21": "List your pets.",
+            "22": "List 3 things you need to buy.",
+            "23": "Today it made me feel good to know ______________.",
+            "24": "In whose life did you make a difference today?",
+            "25": "What is your superpower?",
+            "26": "What is bothering you?",
+            "27": "What would have made this day perfect?",
+            "28": "What makes you anxious?",
+            "29": "What did you do to take advantage of this extra day this year?"
         },
         "2": {
             "1": "Qual è la cosa più simpatica che hai sentito oggi?",
