--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -54,7 +54,7 @@
             "12": "Quante foto hai fatto/pubblicato oggi?",
             "13": "Quale libro stai leggendo oggi?",
             "14": "Quante ore hai dormito la scorsa notte?",
-            "15": "Qual è l’ultima cosa che volevi ma non hai avuto?",
+            "15": "Qual è una piccola cosa che ti rende sempre felice?",
             "16": "Qual è il tuo stato d’animo oggi?",
             "17": "Qual è stata l’ultima cosa nuova che hai sperimentato?",
             "18": "La mia speranza più grande è ______________.",
