add march to december translations

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -71,134 +71,134 @@
             "29": "What did you do to take advantage of this extra day this year?"
         },
         "2": {
-            "1": "Qual è la cosa più simpatica che hai sentito oggi?",
-            "2": "Se potessi avere un altro talento quale sarebbe?",
-            "3": "Chi è il tuo migliore amico, eccetto tuo marito/tua moglie?",
-            "4": "Cosa vorresti non aver detto?",
-            "5": "Qual è stata la prima cosa che hai bevuto e/o mangiato oggi?",
-            "6": "Stai risparmiando o spendendo?",
-            "7": "Su una scala da 1 a 10 quanto è pulita la tua casa?",
-            "8": "Qual è l’ultima canzone che hai ascoltato?",
-            "9": "Cosa ti tranquillizza?",
-            "10": "Qual è la cosa di maggior valore che possiedi?",
-            "11": "Cosa ti ha ispirato oggi?",
-            "12": "Qual è stata la cosa più inaspettata successa oggi?",
-            "13": "Quanto tempo hai dedicato a te stesso oggi?",
-            "14": "Elenca 3 cose in cui credi.",
-            "15": "Cosa hai imparato di nuovo oggi, anche di piccolo?",
-            "16": "Pesi ogni opportunità?",
-            "17": "Dove sei stato oggi?",
-            "18": "Quale consiglio ti è stato dato?",
-            "19": "Oggi è stato ______________.",
-            "20": "Cosa sei contento di aver fatto oggi?",
-            "21": "Quando sei stato in vacanza l’ultima volta? Dove sei stato?",
-            "22": "La saggezza più grande viene da ______________.",
-            "23": "Chi è il tuo eroe?",
-            "24": "Perché?",
-            "25": "Se avessi potuto leggere nella mente di qualcuno oggi, chi avresti scelto?",
-            "26": "Qual è stata la cosa più facile oggi?",
-            "27": "Hai ringraziato qualcuno oggi?",
-            "28": "Hai lavorato sodo oggi?",
-            "29": "Cosa hai trovato nella cassetta della posta oggi?",
-            "30": "Oggi è stato un totale ______________.",
-            "31": "Cosa stai cercando?"
+            "1": "What is the funniest thing you heard today?",
+            "2": "If you could have another talent, what would it be?",
+            "3": "Who is your best friend?",
+            "4": "What do you wish you hadn't said?",
+            "5": "What was the first thing you drank and/or ate today?",
+            "6": "Are you saving or spending?",
+            "7": "On a scale of 1 to 10, how clean is your house?",
+            "8": "What is the last song you listened to?",
+            "9": "What calms you down?",
+            "10": "What is the most valuable thing you own?",
+            "11": "What inspired you today?",
+            "12": "What was the most unexpected thing that happened today?",
+            "13": "How much time did you dedicate to yourself today?",
+            "14": "List 3 things you believe in.",
+            "15": "What did you learn new today, even something small?",
+            "16": "Do you weigh every opportunity?",
+            "17": "Where were you today?",
+            "18": "What advice were you given?",
+            "19": "Today was ______________.",
+            "20": "What are you happy you did today?",
+            "21": "When was the last time you were on vacation? Where did you go?",
+            "22": "The greatest wisdom comes from ______________.",
+            "23": "Who is your hero?",
+            "24": "Why?",
+            "25": "If you could read someone's mind today, who would you choose?",
+            "26": "What was the easiest thing today?",
+            "27": "Did you thank anyone today?",
+            "28": "Did you work hard today?",
+            "29": "What did you find in the mailbox today?",
+            "30": "Today was a total ______________.",
+            "31": "What are you looking for?"
         },
         "3": {
-            "1": "Hai fatto ridere qualcuno oggi? L’hai fatto intenzionalmente?",
-            "2": "Cosa ti rende triste?",
-            "3": "Oggi è stata una giornata ordinaria? Perché? Perché no?",
-            "4": "Di chi ti fidi di più?",
-            "5": "Quand'è la tua prossima scadenza importante? Cosa riguarda?",
-            "6": "Cosa hai mangiato a colazione oggi?",
-            "7": "Hai rimpianti oggi?",
-            "8": "Come hai aggiunto un tocco di arte nella tua giornata oggi?",
-            "9": "______________ mi rende felice.",
-            "10": "Quando è stata l’ultima volta che hai ballato?",
-            "11": "Elenca le persone con cui vivi.",
-            "12": "Di cosa hai avuto paura oggi?",
-            "13": "Cosa ti sei dimenticato?",
-            "14": "Qual è il tuo programma televisivo preferito?",
-            "15": "Credo che ______________.",
-            "16": "Chi è l’ultima persona che hai baciato?",
-            "17": "Cosa indossavi oggi?",
-            "18": "Cosa ti sta mettendo alla prova?",
-            "19": "Qual è la cosa più vecchia che indossi oggi?",
-            "20": "Elenca 5 cose che avresti dovuto fare oggi.",
-            "21": "Dove hai passato la maggior parte del tempo oggi?",
-            "22": "Scrivi la tua citazione preferita.",
-            "23": "Per cosa ti sei preoccupato oggi?",
-            "24": "Sei stato creativo oggi? In che modo?",
-            "25": "Qual è il prossimo grande acquisto che devi fare?",
-            "26": "Qual è l’ultima cosa che ti ha fatto piangere?",
-            "27": "Oggi è stata dura perché ______________.",
-            "28": "Di chi sei geloso?",
-            "29": "Dove vuoi andare prossimamente?",
-            "30": "Cosa hai letto oggi?"
+            "1": "Did you make anyone laugh today? Did you do it intentionally?",
+            "2": "What makes you sad?",
+            "3": "Was today an ordinary day? Why? Why not?",
+            "4": "Who do you trust the most?",
+            "5": "When is your next important deadline? What is it about?",
+            "6": "What did you eat for breakfast today?",
+            "7": "Do you have any regrets today?",
+            "8": "How did you add a touch of art to your day today?",
+            "9": "______________ makes me happy.",
+            "10": "When was the last time you danced?",
+            "11": "List the people you live with.",
+            "12": "What were you afraid of today?",
+            "13": "What did you forget?",
+            "14": "What is your favorite TV show?",
+            "15": "I believe that ______________.",
+            "16": "Who is the last person you kissed?",
+            "17": "What were you wearing today?",
+            "18": "What is challenging you?",
+            "19": "What is the oldest thing you are wearing today?",
+            "20": "List 5 things you should have done today.",
+            "21": "Where did you spend most of your time today?",
+            "22": "Write your favorite quote.",
+            "23": "What did you worry about today?",
+            "24": "Were you creative today? How?",
+            "25": "What is the next big purchase you need to make?",
+            "26": "What is the last thing that made you cry?",
+            "27": "Today was hard because ______________.",
+            "28": "Who are you jealous of?",
+            "29": "Where do you want to go next?",
+            "30": "What did you read today?"
         },
         "4": {
-            "1": "Chi è stato gentile con te oggi?",
-            "2": "Chi è l’ultima persona con cui hai parlato?",
-            "3": "Cosa ti fa sentire vivo?",
-            "4": "Il negozio che frequenti di più è ______________.",
-            "5": "Come ti sei rilassato oggi?",
-            "6": "Descrivi il paio di scarpe preferito che possiedi.",
-            "7": "Quale regola ti condiziona di più durante il giorno?",
-            "8": "Quante paia di scarpe possiedi?",
-            "9": "Oggi ho perso ______________.",
-            "10": "Vorrei che ______________ non fosse stato inventato.",
-            "11": "Qual è la cosa più costosa in tuo possesso che puoi portare con te?",
-            "12": "Quanti soldi hai nel portafoglio in questo momento?",
-            "13": "Cosa ha reso oggi una giornata unica?",
-            "14": "Cosa non hai completato oggi?",
-            "15": "Oggi il tempo era ______________.",
-            "16": "Cosa ti è arrivato via mail oggi?",
-            "17": "Cosa avresti voluto dire oggi?",
-            "18": "Qual è stata la decisione più grande che hai preso oggi?",
-            "19": "Cosa stai aspettando?",
-            "20": "Qual è la più grande verità rispetto alla tua giornata?",
-            "21": "Qual è l’ultima cosa di cui ti sei accontentato?",
-            "22": "Descrivi la tua giornata con una frase di 6 parole.",
-            "23": "Qual è stata l’ultima cosa che ti ha fatto male?",
-            "24": "Hai usato il tuo tempo saggiamente oggi?",
-            "25": "Hai fatto un sogno la scorsa notte? Descrivilo.",
-            "26": "Dove vorresti essere?",
-            "27": "Quali canzoni hai ascoltato oggi?",
-            "28": "Qual è stata la cosa più divertente fatta oggi?",
-            "29": "Cosa ami di più tra le cose che devi fare tutti i giorni?",
-            "30": "Quali sono i tuoi hobby?",
-            "31": "Qual è stato il momento più “down” oggi?"
+            "1": "Who was kind to you today?",
+            "2": "Who is the last person you talked to?",
+            "3": "What makes you feel alive?",
+            "4": "The store I frequent the most is ______________.",
+            "5": "How did you relax today?",
+            "6": "Describe your favorite pair of shoes you own.",
+            "7": "What rule affects you the most during the day?",
+            "8": "How many pairs of shoes do you own?",
+            "9": "Today I lost ______________.",
+            "10": "I wish ______________ had not been invented.",
+            "11": "What is the most expensive thing you own that you can carry with you?",
+            "12": "How much money do you have in your wallet right now?",
+            "13": "What made today a unique day?",
+            "14": "What did you not complete today?",
+            "15": "Today the weather was ______________.",
+            "16": "What did you receive by email today?",
+            "17": "What did you want to say today?",
+            "18": "What was the biggest decision you made today?",
+            "19": "What are you waiting for?",
+            "20": "What is the biggest truth about your day?",
+            "21": "What is the last thing you settled for?",
+            "22": "Describe your day in a 6-word sentence.",
+            "23": "What was the last thing that hurt you?",
+            "24": "Did you use your time wisely today?",
+            "25": "Did you have a dream last night? Describe it.",
+            "26": "Where would you like to be?",
+            "27": "What songs did you listen to today?",
+            "28": "What was the funniest thing you did today?",
+            "29": "What do you love most about the things you have to do every day?",
+            "30": "What are your hobbies?",
+            "31": "What was the most “down” moment today?"
         },
         "5": {
-            "1": "Qual è una piccola cosa che puoi fare per prenderti cura di te stesso?",
-            "2": "Quanto è stato vicino alla perfezione oggi?",
-            "3": "Quando è stata l’ultima volta che hai cantato a squarciagola?",
-            "4": "Qual è stata l’ultima assemblea/raduno a cui hai partecipato?",
-            "5": "C’è qualcosa che ti ha reso triste oggi?",
-            "6": "Confida un segreto.",
-            "7": "Elenca 5 cose che vorresti aver inventato.",
-            "8": "Qual è stata l’ultima ricetta che hai cucinato?",
-            "9": "Chi è il tuo amico più fidato?",
-            "10": "Cosa ti ha fatto perdere la cognizione del tempo oggi?",
-            "11": "Di cosa sei sicuro?",
-            "12": "Perché?",
-            "13": "Qual è l’ultimo acquisto fatto?",
-            "14": "Hai fatto apprezzamenti a qualcuno oggi?",
-            "15": "Quanti sollevamenti sei in grado di fare?",
-            "16": "Cosa stai aspettando?",
-            "17": "Qual è il tuo piatto preferito da cucinare?",
-            "18": "Non è mai troppo ______________.",
-            "19": "Qual è la cosa più importante che ti è stata detta oggi?",
-            "20": "Qual è l’ultima cosa a cui hai pensato oggi?",
-            "21": "Qual è il titolo dell’ultimo libro che hai letto?",
-            "22": "Cosa importa oggi?",
-            "23": "A quale progetto stai lavorando?",
-            "24": "Senza guardare ciò che hai scritto gli anni precedenti, metti una firma qui.",
-            "25": "Qual è il bene materiale più prezioso che possiedi?",
-            "26": "Stavi bene o male oggi?",
-            "27": "Qual è la cosa più intelligente che hai fatto oggi?",
-            "28": "Cosa hai trovato nella cassetta delle lettere oggi?",
-            "29": "Oggi ero ______________.",
-            "30": "L’ultima cosa che ho acquistato per me stesso è stata ______________."
+            "1": "What is one small thing you can do to take care of yourself?",
+            "2": "How close to perfect was today?",
+            "3": "When was the last time you sang at the top of your lungs?",
+            "4": "What was the last meeting/gathering you attended?",
+            "5": "Is there something that made you sad today?",
+            "6": "Confide a secret.",
+            "7": "List 5 things you wish you had invented.",
+            "8": "What was the last recipe you cooked?",
+            "9": "Who is your most trusted friend?",
+            "10": "What made you lose track of time today?",
+            "11": "What are you sure of?",
+            "12": "Why?",
+            "13": "What was your last purchase?",
+            "14": "Did you compliment anyone today?",
+            "15": "How many push-ups are you able to do?",
+            "16": "What are you waiting for?",
+            "17": "What is your favorite dish to cook?",
+            "18": "It's never too ______________.",
+            "19": "What is the most important thing that was said to you today?",
+            "20": "What is the last thing you thought about today?",
+            "21": "What is the title of the last book you read?",
+            "22": "What matters today?",
+            "23": "What project are you working on?",
+            "24": "Without looking at what you wrote in previous years, put a signature here.",
+            "25": "What is the most precious material possession you own?",
+            "26": "Were you feeling good or bad today?",
+            "27": "What is the smartest thing you did today?",
+            "28": "What did you find in the mailbox today?",
+            "29": "Today I was ______________.",
+            "30": "The last thing I bought for myself was ______________."
         },
         "6": {
             "1": "Eri solo oggi?",
