--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -73,7 +73,7 @@
         "2": {
             "1": "Qual è la cosa più simpatica che hai sentito oggi?",
             "2": "Se potessi avere un altro talento quale sarebbe?",
-            "3": "Chi è il tuo migliore amico, eccetto tuo marito/tua moglie?",
+            "3": "Chi è il tuo migliore amico?",
             "4": "Cosa vorresti non aver detto?",
             "5": "Qual è stata la prima cosa che hai bevuto e/o mangiato oggi?",
             "6": "Stai risparmiando o spendendo?",
